--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+<ul>
     <li><a href="recipes/frenchtoast.html">French Toast</a></li>
     <li><a href="recipes/peanut&jelly.html">Peanut butter and Jelly Sandwich</a></li>
     <li><a href="recipes/cereal.html">Cereal</a></li>
 </ul>
+<!--
+    CSS FOUNDATIONS 
+    types of selectors
+        universal - (needs a "*") do it to everything on the page
+        type - allow to choose any specific element like only headings or only paragraphs
+        Class - something within an element so its not always an element but some specific paragraphs or headings
+        IDs - only one kind with a # and im still confused with what it is
+            .read and .unread - allow to bunch together similar declarations for simplicity
+            Chaining selectors - allows to give separate rules to specific elements without repetition
+    How do we combine multiple selectors without grouping or chaining selectors?
+    decendent combinators 
+        allows for any decendent to be selected to have a declaration happen to them
+        ex. I can only be chosen if I am under otileia and if not then it wont apply to me
+
+
+
+
+-->
+
 </body>
 </html>
